# pokemcp

./: README.md  main.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/pokemcp/: app.py  config.py  server.py
src/pokemcp/api/: __init__.py  cache.py  client.py
src/pokemcp/models/: __init__.py  pokemon.py
src/pokemcp/resources/: __init__.py  pokedex.py
src/pokemcp/tools/: __init__.py  items.py  moves.py  pokemon.py  types.py
