[project]
name = "pokemcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "tenacity",
    "pydantic",
    "pydantic-settings",
    "redis",
]

[project.scripts]
pokemcp = "pokemcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
